# blight-synth

./: .gitignore  Cargo.toml  README.md  ending_theme_no_effect.json  test.json  test_2.json  test_3.json  test_4.json
.cargo/: config.toml
assets/: generate_notes_json.py  notes.csv  notes.json
audio_backend/: Cargo.toml
audio_backend/examples/: cycle_waveforms.rs  envelope.rs  master_gain.rs  master_reverb.rs  polyphonic_song.rs  sample_playback.rs  simple_setup.rs  simple_song.rs  voice_effects.rs
audio_backend/src/: audio_processor.rs  blight_audio.rs  commands.rs  lib.rs  result.rs  voice_factory.rs
audio_backend/src/audio_frontend/: blight_audio.rs  commands.rs  mod.rs  tracker.rs
audio_backend/src/audio_processor/: mod.rs  no_sequencer.rs  tracker.rs  unified.rs
audio_backend/src/devices/: audio_engine.rs  mod.rs  streams.rs
audio_backend/src/effects/: delay.rs  distortion.rs  filter.rs  gain.rs  mod.rs  reverb.rs
audio_backend/src/envelope/: mod.rs
audio_backend/src/factories/: effect_factory.rs  instrument_factory.rs  mod.rs  voice_factory.rs
audio_backend/src/id/: mod.rs
audio_backend/src/instruments/: hihat.rs  kick_drum.rs  mod.rs  monophonic_osc.rs  polyphonic_osc.rs  snare_drum.rs
audio_backend/src/player/: commands.rs  mod.rs  synthesizer.rs  tracker_synthesizer.rs
audio_backend/src/resources/: mod.rs
audio_backend/src/synth_infra/: controls.rs  effects.rs  envelope.rs  mod.rs  (+6 more)
audio_backend_deprecated/: Cargo.toml
audio_backend_deprecated/src/: lib.rs
audio_backend_reworked/: Cargo.toml
audio_backend_reworked/examples/: cycle_waveforms.rs  envelope.rs  simple_setup.rs
audio_backend_reworked/src/: audio_processor.rs  blight_audio.rs  commands.rs  lib.rs  voice_factory.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: frontent.md
frontend/: index.html
frontend/src/: main.ts  oscillator-control.ts  pad-keys.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
gui/: Cargo.toml
gui/src/: main.rs
gui/src/event_handlers/: keyboard.rs  mod.rs
gui/src/ui_components/: mod.rs  wave_form_radio_button.rs
gui/src/view_models/: oscillator.rs
harmony/: Cargo.toml
harmony/src/: lib.rs  note.rs  scales.rs
scripts/: generate_notes_json.py
sequencer/: Cargo.toml  README.md
sequencer/src/: lib.rs  main.rs
src/: main.rs
tracker_gui/: Cargo.toml  README.md
tracker_gui/src/: app.rs  audio.rs  audio_utils.rs  file_ops.rs  instrument_manager.rs  main.rs  shortcuts.rs  theme.rs  ui_components.rs  ui_state.rs
tracker_gui/src/menu/: mod.rs  renderer.rs  shortcuts.rs
tracker_gui/src/tabs/: arrangement.rs  chains.rs  mod.rs  phrases.rs
tracker_gui/src/ui_components/: hex.rs  side_panel.rs
ui/: Cargo.toml
ui/src/: main.rs
ui/src/event_handlers/: keyboard.rs  mod.rs
ui/src/ui_components/: mod.rs
ui/src/view_models/: oscillator.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+59 files in other folders)
