[workspace]
resolver = "2"
members = ["audio_backend", "harmony", "sequencer"]
default-members = ["sequencer"]
exclude = ["frontend/src-tauri"]

[workspace.dependencies]
bincode = "2.0.1"
cpal = "0.15"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"

sequencer = { path = "sequencer" }
harmony = { path = "harmony" }
audio_backend = { path = "audio_backend" }