[workspace]
resolver = "2"
members = ["audio_backend", "utils", "sequencer"]
# TODO: undo
# default-members = ["sequencer"]
default-members = ["audio_backend"]
exclude = ["frontend/src-tauri"]

[workspace.dependencies]
bincode = "2.0.1"
cpal = "0.15"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8"
ringbuf = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
hound = "3.5"

sequencer = { path = "sequencer" }
utils = { path = "utils" }
# audio_backend_deprecated = { path = "audio_backend_deprecated" }
audio_backend = { path = "audio_backend" }