[package]
name = "blight-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
harmony = { path = "../harmony" }

anyhow = "1.0"

eframe = "0.26"
egui = "0.26"

env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
