[package]
name = "tracker_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { workspace = true }
egui_extras = { workspace = true }
env_logger = { workspace = true }
rfd = { workspace = true }
sequencer = { workspace = true }
audio_backend = { workspace = true, features = ["tracker"] }
