[package]
name = "blight-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
harmony = { path = "../harmony" }

anyhow = "1.0"

eframe = "0.24"
egui = "0.24"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
